@@ -7,14 +7,13 @@ import org.example.model.Product;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class VendingMachineTest {
 
-    private final VendingMachine vendingMachine = new VendingMachine(5, Arrays.asList(
+    private final VendingMachine vendingMachine = new VendingMachine(5, List.of(
             new CoinItem(200,  10),
             new CoinItem(100,  10),
             new CoinItem(50,  10),
@@ -24,7 +23,7 @@ class VendingMachineTest {
 
     @Test
     void canAddNewProductToVendingMachine() {
-        VendingMachine vm = new VendingMachine(5, Arrays.asList(
+        VendingMachine vm = new VendingMachine(5, List.of(
                 new CoinItem(200,  10),
                 new CoinItem(100,  10),
                 new CoinItem(50,  10),
@@ -37,7 +36,7 @@ class VendingMachineTest {
 
     @Test
     void canUpdateItemPriceInVendingMachine() {
-        VendingMachine vm = new VendingMachine(5, Arrays.asList(
+        VendingMachine vm = new VendingMachine(5, List.of(
                 new CoinItem(200,  10),
                 new CoinItem(100,  10),
                 new CoinItem(50,  10),
@@ -100,11 +99,33 @@ class VendingMachineTest {
     void canPurchaseProduct(){
         var item1 = vendingMachine.createItem(new ManagedProduct("A1", 100, 10));
         vendingMachine.updateItemStock(item1.getId(), 5);
-        //todo not providing change yet.
-        vendingMachine.purchaseProduct(item1.getId(), new ArrayList<>());
+        vendingMachine.purchaseProduct(item1.getId(), List.of(new CoinItem(100, 1)));
 
         var actual = vendingMachine.viewProduct(item1.getId());
 
         assertEquals(4, actual.getStock());
+        var tillContents = vendingMachine.getTillContents();
+        assertEquals(Boolean.TRUE, tillContents.contains(new CoinItem(100, 11)));
+    }
+
+    @Test
+    void canPurchaseProductAndValidateChange(){
+        var item1 = vendingMachine.createItem(new ManagedProduct("A1", 450, 10));
+        vendingMachine.updateItemStock(item1.getId(), 5);
+        var change = vendingMachine.purchaseProduct(item1.getId(), List.of(
+                new CoinItem(100, 2),
+                new CoinItem(200, 2),
+                new CoinItem(10, 6)));
+
+        var actual = vendingMachine.viewProduct(item1.getId());
+
+        assertEquals(4, actual.getStock());
+        var tillContents = vendingMachine.getTillContents();
+        //validate till contents updates correctly
+        assertEquals(Boolean.TRUE, tillContents.contains(new CoinItem(200, 11)));
+        assertEquals(Boolean.TRUE, tillContents.contains(new CoinItem(100, 12)));
+        assertEquals(Boolean.TRUE, tillContents.contains(new CoinItem(10, 15)));
+        //validate change returned
+        assertEquals(List.of(new CoinItem(200, 1), new CoinItem(10, 1)), change);
     }
 }
